--- a/klausimai/templates/pagrindinis.html
+++ b/klausimai/templates/pagrindinis.html
@@ -8,29 +8,36 @@
         <textarea name="tekstas" placeholder="Įveskite klausimą"></textarea>
         <button type="submit">Klausti</button>
     </form>
-
-    <h3>Neatsakyti klausimai</h3>
-    <ul>
-        {% for klausimas in neatsakyti %}
-            <li>
-                {{ klausimas.tekstas }}
-
-            </li>
-        {% endfor %}
-    </ul>
-
-    <h3>Atsakyti klausimai</h3>
-    <ul>
-        {% for klausimas in atsakyti %}
-            <li>
-                {{ klausimas.tekstas }} - Atsakymas: {{ klausimas.atsakymas }}
-            </li>
-        {% endfor %}
-    </ul>
-
 {% else %}
     <h2>Prisijungti:</h2>
     <a href="{% url 'login' %}">Prisijungti</a>
     <h2>Užsiregistruoti:</h2>
     <a href="{% url 'register' %}">Užsiregistruoti</a>
 {% endif %}
+
+<h3>Neatsakyti klausimai</h3>
+<ul>
+    {% for klausimas in neatsakyti %}
+        <li>
+            Klausimas: {{ klausimas.tekstas }} (Užduotas klausimas vartotojo: {{ klausimas.uzduotas_vartotojas }})
+            {% if user.is_authenticated %}
+                <form method="post">
+                    {% csrf_token %}
+                    Atsakymas:
+                    <textarea name="atsakymas"></textarea>
+                    <input type="hidden" name="klausimas_id" value="{{ klausimas.id }}">
+                    <button type="submit">Atsakyti</button>
+                </form>
+            {% endif %}
+        </li>
+    {% endfor %}
+</ul>
+
+<h3>Atsakyti klausimai</h3>
+<ul>
+    {% for klausimas in atsakyti %}
+        <li>Klausimas: {{ klausimas.tekstas }} (Užduotas klausimas vartotojo: {{ klausimas.uzduotas_vartotojas }})
+            <br> Atsakymas: {{ klausimas.atsakymas }} (Atsakė: {{ klausimas.atsake_vartotojas }})
+        </li>
+    {% endfor %}
+</ul>
